@@ -1,0 +1,37 @@
+test
+this
+is a test
+this is a
+this is uNF test
+a
+this is a testthis is a testthis is a testthis is a testthis is a testthis is a 
+t a si sihttset a si sihttset a si sihttset a si sihttset a si sihttset a si siht
+--): gnirts elbisrever a si siht++
+string
+string
+Warning: &mid: illegal substring('++this is a reversible string :)--', -11 -> 23, 89 -> 19) indices at strmods.sl:42
+2
+2
+2
+5
+5
+5
+-1
+-1
+-1
+-1
+-1
+-1
+-1
+-1
+2
+2
+2
+5
+5
+5
+-1
+-1
+-1
+-1
+-1
